tests/fixtures/errors/invalid_participant_queue_alias_collision.puml
@startuml
queue Jobs as Q
participant QueueShadow as Q
Q -> Q: collision
@enduml
